sfdx-source/force-app/main/default/objects/WorkPlan/WorkPlan.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>