sfdx-source/force-app/main/default/objects/WorkPlan/fields/Account_Bililng_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Bililng_Address__c</fullName>
    <formula>WorkOrder.Account.BillingStreet +  BR()
+ WorkOrder.Account.BillingCity +  BR()
+ WorkOrder.Account.BillingState + &apos;,&apos;
+ WorkOrder.Account.BillingCountry +  BR()
+ WorkOrder.Account.BillingPostalCode +  BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address</label>
    <type>Text</type>
</CustomField>