sfdx-source/force-app/main/default/objects/WorkPlan/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>LEM-4944: It indicates the name of Account associated with Work Order of Work Plan. It is used to filter list views or reports on Work Plan object.</description>
    <formula>WorkOrder.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>