sfdx-source/force-app/main/default/objects/WorkPlan/fields/Account_Tablet_Password__c.field-meta.xml
<CustomField>
    <fullName>Account_Tablet_Password__c</fullName>
    <formula>WorkOrder.Account.Tablet_Password__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Tablet Password</label>
    <type>Text</type>
</CustomField>