sfdx-source/force-app/main/default/objects/WorkPlan/fields/Account_Tablet_Username__c.field-meta.xml
<CustomField>
    <fullName>Account_Tablet_Username__c</fullName>
    <description>Account Tablet Username</description>
    <formula>WorkOrder.Account.Tablet_User_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Tablet Username</inlineHelpText>
    <label>Account Tablet Username</label>
    <type>Text</type>
</CustomField>