sfdx-source/force-app/main/default/objects/WorkPlan/fields/Activated_Centrally__c.field-meta.xml
<CustomField>
    <fullName>Activated_Centrally__c</fullName>
    <description>LEM-4773: It indicates the Activated Centrally value to be used on Work Plan list views.</description>
    <formula>TEXT(WorkOrder.Activated_Centrally_AC__c)</formula>
    <label>Activated Centrally</label>
    <type>Text</type>
</CustomField>