sfdx-source/force-app/main/default/objects/WorkPlan/fields/Activation_Checklist_Validation__c.field-meta.xml
<CustomField>
    <fullName>Activation_Checklist_Validation__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13304: It indicates the activation checklist validation progress.</description>
    <label>Activation Checklist Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>