sfdx-source/force-app/main/default/objects/WorkPlan/fields/Business_Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Country__c</fullName>
    <description>LEM-1047: It indicates the country code of Business Account.</description>
    <formula>WorkOrder.Business_Account_Country__c</formula>
    <label>Business Account Country</label>
    <type>Text</type>
</CustomField>