sfdx-source/force-app/main/default/objects/WorkPlan/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <description>LEM-4944: It indicates the Business ID of Xref associated with Work Plan. It is used to filter list views or reports on Work Plan object.</description>
    <formula>Xref__r.BusinessID__c</formula>
    <label>Business ID</label>
    <type>Text</type>
</CustomField>