sfdx-source/force-app/main/default/objects/WorkPlan/fields/Change_of_Ownership_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_of_Ownership_Effective_Date__c</fullName>
    <formula>WorkOrder.Account.Change_of_Ownership_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change of Ownership Effective Date</label>
    <type>Date</type>
</CustomField>