sfdx-source/force-app/main/default/objects/WorkPlan/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <formula>WorkOrder.Decision_Maker__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Maker</label>
    <type>Text</type>
</CustomField>