sfdx-source/force-app/main/default/objects/WorkPlan/fields/Decision_Maker_Email__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Email__c</fullName>
    <description>Decision Maker email address</description>
    <formula>WorkOrder.Decision_Maker__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Decision Maker email address</inlineHelpText>
    <label>Decision Maker Email</label>
    <type>Text</type>
</CustomField>