sfdx-source/force-app/main/default/objects/WorkPlan/fields/Deck_Rank__c.field-meta.xml
<CustomField>
    <fullName>Deck_Rank__c</fullName>
    <description>LEM-4773: It indicates the Deck Rank value to be used on Work Plan list views.</description>
    <formula>TEXT(WorkOrder.Account.Deck_Rank__c)</formula>
    <label>Deck Rank</label>
    <type>Text</type>
</CustomField>