sfdx-source/force-app/main/default/objects/WorkPlan/fields/Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Deprecated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to filter WorkPlan types returned by WorkplanMapper</description>
    <inlineHelpText>Used to filter WorkPlan types returned by WorkplanMapper</inlineHelpText>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>