sfdx-source/force-app/main/default/objects/WorkPlan/fields/Display_Ads_Promos_ListView_Filter__c.field-meta.xml
<CustomField>
    <fullName>Display_Ads_Promos_ListView_Filter__c</fullName>
    <description>LEM-13560: It is used to determine if a work plan should be displayed for a particular list view.</description>
    <formula>IF(
  AND(
    Segment__c == $Label.AccountSegmentSMB,
    OR(
       TEXT(Status__c) != $Label.Work_Order_Status_Dead, 
       TEXT(Status__c) != $Label.Status_Complete
    ),
    OR(
      Deck_Rank__c != $Label.DeckRankKingOfSpades,
      Deck_Rank__c != $Label.DeckRankAceOfSpades
    ),
     Work_Order_Type__c == $Label.Ads_Promos
  ),
  TRUE,
  FALSE
)</formula>
    <label>Display Ads Promos ListView Filter</label>
    <type>Checkbox</type>
</CustomField>