sfdx-source/force-app/main/default/objects/WorkPlan/fields/Email_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Reference_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>LEM-22084 Field used to link an incoming email with the work plan</description>
    <externalId>true</externalId>
    <label>Email Reference Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>