sfdx-source/force-app/main/default/objects/WorkPlan/fields/Enable_Menu_UI_Type_Banner__c.field-meta.xml
<CustomField>
    <fullName>Enable_Menu_UI_Type_Banner__c</fullName>
    <description>LEM-3493: It is used to check whether to enable Menu UI Type banner on parent Work Plan.</description>
    <formula>AND(
  ISBLANK(Parent_Work_Plan__c),
  CONTAINS(
    $CustomMetadata.Static_Configurations__mdt.WorkPlanTypesToDisplayMenuUITypeBanner.Configuration_Value__c,
    TEXT(Type__c)
  ),
  WorkOrder.HasCatalogWorkPlan__c,
  WorkOrder.HasMenuWorkPlan__c
)</formula>
    <label>Enable Menu UI Type Banner</label>
    <type>Checkbox</type>
</CustomField>