sfdx-source/force-app/main/default/objects/WorkPlan/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>LEM-13590: It is used to link the Work Order experience to an onboarding event.</description>
    <formula>WorkOrder.Experience__c</formula>
    <label>Experience</label>
    <type>Text</type>
</CustomField>