sfdx-source/force-app/main/default/objects/WorkPlan/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>LEM-4944: It indicates the External ID of Xref associated with Work Plan. It is used to filter list views or reports on Work Plan object.</description>
    <formula>Xref__r.External_ID__c</formula>
    <label>External ID</label>
    <type>Text</type>
</CustomField>