sfdx-source/force-app/main/default/objects/WorkPlan/fields/Have_All_Stores_Activated__c.field-meta.xml
<CustomField>
    <fullName>Have_All_Stores_Activated__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-2132: It is used to route the Parent Work Plan whenever all store Accounts related to child Work Plans are activated.</description>
    <label>Have All Stores Activated?</label>
    <type>Checkbox</type>
</CustomField>