sfdx-source/force-app/main/default/objects/WorkPlan/fields/Integration_Request__c.field-meta.xml
<CustomField>
    <fullName>Integration_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is looking upto the Bat integration request request object</description>
    <inlineHelpText>Bat Pos Integration request</inlineHelpText>
    <label>Integration Request</label>
    <referenceTo>Integration_Request__c</referenceTo>
    <relationshipLabel>Work Plans</relationshipLabel>
    <relationshipName>Work_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>