sfdx-source/force-app/main/default/objects/WorkPlan/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>LEM-3268: It evaluates to Failure value on basis on Integration Status of the associated Xref and Business Reference record.</description>
    <formula>IF(
  OR(
    TEXT(Xref__r.Business_Reference__r.Integration_Status__c) = $Label.Integration_Status_Failure,
    TEXT(Xref__r.Integration_Status__c) = $Label.Integration_Status_Failure,
    TEXT(Business_Reference__r.Integration_Status__c) = $Label.Integration_Status_Failure
  ),
  $Label.Integration_Status_Failure,
  &apos;&apos;
)</formula>
    <label>Integration Status</label>
    <type>Text</type>
</CustomField>