sfdx-source/force-app/main/default/objects/WorkPlan/fields/Is_POS_Integration_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_POS_Integration_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-25823: It indicates child WorkPlan's WorkOrder is having verified POS Integration Type and also being used to route WorkPlan owner to POS queue.</description>
    <label>Is POS Integration Verified</label>
    <type>Checkbox</type>
</CustomField>