sfdx-source/force-app/main/default/objects/WorkPlan/fields/Is_Store_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Store_Active__c</fullName>
    <description>LEM-1161: Indicates whether the Store Account is active or not.</description>
    <formula>IF(
  WorkOrder.Store_Account_Activation_Status__c = $Label.Account_Activation_Status_Active,
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Is Store Active</label>
    <type>Checkbox</type>
</CustomField>