sfdx-source/force-app/main/default/objects/WorkPlan/fields/Is_Virtual_Store__c.field-meta.xml
<CustomField>
    <fullName>Is_Virtual_Store__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-21618: It indicates child WorkPlan's WorkOrder is associated to Virtual Store and also being used to route WorkPlan owner to VB queue.</description>
    <label>Is Virtual Store</label>
    <type>Checkbox</type>
</CustomField>