sfdx-source/force-app/main/default/objects/WorkPlan/fields/Last_Rescue_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Rescue_Contact_Date__c</fullName>
    <description>LEM-13575: MxS rep will manually update it with today’s date and time.</description>
    <label>Last Rescue Contact Date</label>
    <type>DateTime</type>
</CustomField>