sfdx-source/force-app/main/default/objects/WorkPlan/fields/Last_Validation_Execution__c.field-meta.xml
<CustomField>
    <fullName>Last_Validation_Execution__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13304: It store the validation completion date &amp; time.</description>
    <label>Last Validation Execution</label>
    <type>DateTime</type>
</CustomField>