sfdx-source/force-app/main/default/objects/WorkPlan/fields/Menu_Code__c.field-meta.xml
<CustomField>
    <fullName>Menu_Code__c</fullName>
    <description>LEM-1683: Menu codes allow us to determine the scope of work involved in a with menu update to understand effort required.</description>
    <label>Menu Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRIAGE</fullName>
            </value>
            <value>
                <fullName>QU</fullName>
            </value>
            <value>
                <fullName>MU</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
            <value>
                <fullName>BU</fullName>
            </value>
            <value>
                <fullName>ROLLOUT</fullName>
            </value>
            <value>
                <fullName>PROJECT</fullName>
            </value>
            <value>
                <fullName>DUPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>