sfdx-source/force-app/main/default/objects/WorkPlan/fields/Menu_Send_Preview_By__c.field-meta.xml
<CustomField>
    <fullName>Menu_Send_Preview_By__c</fullName>
    <description>LEM-1683: It lets the rep know when preview links are required by the Mx to review before actually making the changes live.</description>
    <label>Menu Send Preview By</label>
    <type>Date</type>
</CustomField>