sfdx-source/force-app/main/default/objects/WorkPlan/fields/Menu_UI_Type__c.field-meta.xml
<CustomField>
    <fullName>Menu_UI_Type__c</fullName>
    <description>LEM-4944: It indicates the Menu UI Type of Account associated with Work Order of Work Plan. It is used to filter list views or reports on Work Plan object.</description>
    <formula>TEXT(WorkOrder.Account.Menu_UI_Type__c)</formula>
    <label>Menu UI Type</label>
    <type>Text</type>
</CustomField>