sfdx-source/force-app/main/default/objects/WorkPlan/fields/Menu_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Menu_Vendor__c</fullName>
    <description>LEM-1353: Indicates vendor responsible for menu creation.</description>
    <inlineHelpText>Vendor responsible for menu creation</inlineHelpText>
    <label>Menu Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arcgate</fullName>
            </value>
            <value>
                <fullName>Woflow</fullName>
            </value>
            <value>
                <fullName>Invisible</fullName>
            </value>
            <value>
                <fullName>Quantanite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>