sfdx-source/force-app/main/default/objects/WorkPlan/fields/MINT_Updates__c.field-meta.xml
<CustomField>
    <fullName>MINT_Updates__c</fullName>
    <formula>WorkOrder.MINT_Updates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MINT Updates</label>
    <type>Checkbox</type>
</CustomField>