sfdx-source/force-app/main/default/objects/WorkPlan/fields/Mx_Tags__c.field-meta.xml
<CustomField>
    <fullName>Mx_Tags__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14041: It indicates active Mx Tags stamped on Work Order&apos;s Mx Tag field.</description>
    <formula>WorkOrder.Mx_Tags__c</formula>
    <label>Mx Tags</label>
    <type>Text</type>
</CustomField>