sfdx-source/force-app/main/default/objects/WorkPlan/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>LEM-1271: Field to include notes for the agent to follow during the onboarding.</description>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>