sfdx-source/force-app/main/default/objects/WorkPlan/fields/Number_of_Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Call_Attempts__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15997: It is used to save number of call attempts per store at work plan.</description>
    <label>Number of Call Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>