sfdx-source/force-app/main/default/objects/WorkPlan/fields/Number_of_Rescue_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rescue_Attempts__c</fullName>
    <description>LEM-13575:  MxS rep will manually update it with today’s date and time.</description>
    <label>Number of Rescue Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>