sfdx-source/force-app/main/default/objects/WorkPlan/fields/Number_of_Stores_Validated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stores_Validated__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>0</defaultValue>
    <description>LEM-13305: It stores the number of child work plans with &apos;Completed&apos; activation checklist validation status.</description>
    <label>Number of Stores Validated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>