sfdx-source/force-app/main/default/objects/WorkPlan/fields/Number_of_Workable_WorkSteps__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Workable_WorkSteps__c</fullName>
    <defaultValue>0</defaultValue>
    <description>LEM-1181: Number of WorkSteps that are workable i.e. WorkStep&apos;s status is in Not Started, In Progress, Ready for QA, QA Complete, Blocked and Escalated in-case of single store onboarding.
It indicates sum of workable WorkSteps under child WorkPlans on Parent WorkPlan in-case of multi-store onboarding.</description>
    <label>Number of Workable WorkSteps</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>