sfdx-source/force-app/main/default/objects/WorkPlan/fields/Number_of_Workable_WorkSteps_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Workable_WorkSteps_Roll_Up__c</fullName>
    <description>LEM-1181: Number of WorkSteps that are workable i.e. WorkStep&apos;s status is in Not Started, In Progress, Ready for QA, QA Complete, Blocked and Escalated.
It calculates workable WorkSteps on child WorkPlan through Roll-Up Summary.</description>
    <label>Number of Workable WorkSteps Roll-Up</label>
    <summaryFilterItems>
        <field>WorkStep.Status__c</field>
        <operation>equals</operation>
        <value>Not Started, In Progress, Ready for QA, QA Complete, Escalated, Blocked</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkStep.WorkPlanId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>