sfdx-source/force-app/main/default/objects/WorkPlan/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>LEM-13560: It is used to display Opportunity Name.</description>
    <formula>WorkOrder.Opportunity__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>