sfdx-source/force-app/main/default/objects/WorkPlan/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>LEM-13560: It is used to store the Opportunity Type.</description>
    <formula>TEXT(WorkOrder.Opportunity__r.Type)</formula>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>