sfdx-source/force-app/main/default/objects/WorkPlan/fields/Order_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Order_Protocol__c</fullName>
    <description>LEM-4944: It indicates the Order Protocol of Account associated with Work Order of Work Plan. It is used to filter list views or reports on Work Plan object.</description>
    <formula>IF(
 ISBLANK( Parent_Work_Plan__c),
 TEXT( WorkOrder.Order_Protocol__c ),
 TEXT(WorkOrder.Account.Order_Protocol__c)
)</formula>
    <label>Order Protocol</label>
    <type>Text</type>
</CustomField>