sfdx-source/force-app/main/default/objects/WorkPlan/fields/Owner_Link__c.field-meta.xml
<CustomField>
    <fullName>Owner_Link__c</fullName>
    <description>LEM-1983: It displays owner full name as a link in work plan list views.</description>
    <formula>IF(
  OwnerId = Owner:User.Id,
  HYPERLINK(&quot;/&quot; &amp; OwnerId, Owner:User.FirstName + &quot; &quot; + Owner:User.MiddleName + &quot; &quot; + Owner:User.LastName, &quot;_self&quot;),
  Owner:Queue.QueueName
)</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>