sfdx-source/force-app/main/default/objects/WorkPlan/fields/Parent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Order__c</fullName>
    <description>LEM-16014: It indicates Id of Parent Work Order.</description>
    <formula>WorkOrder.ParentWorkOrderId</formula>
    <label>Parent Work Order</label>
    <type>Text</type>
</CustomField>