sfdx-source/force-app/main/default/objects/WorkPlan/fields/Parent_Work_Order_Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Order_Creation_Source__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15585: It indicates the Parent Work Order&apos;s Creation Source.</description>
    <formula>IF(
  WorkOrder.ParentWorkOrderId = null,
  TEXT(WorkOrder.Creation_Source__c),
  TEXT(WorkOrder.ParentWorkOrder.Creation_Source__c)
  )</formula>
    <label>Parent Work Order Creation Source</label>
    <type>Text</type>
</CustomField>