sfdx-source/force-app/main/default/objects/WorkPlan/fields/Parent_Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-527: It is used to maintain relationship with WorkPlan of Parent Work Order.</description>
    <label>Parent Work Plan</label>
    <referenceTo>WorkPlan</referenceTo>
    <relationshipLabel>Child Work Plans</relationshipLabel>
    <relationshipName>Child_Work_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>