sfdx-source/force-app/main/default/objects/WorkPlan/fields/POP_Owned__c.field-meta.xml
<CustomField>
    <fullName>POP_Owned__c</fullName>
    <description>LEM-25823: Populate this value with Yes automatically when the work plans are routed to the “POP Marketplace” queue.</description>
    <formula>TEXT(WorkOrder.POP_Owned__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POP Owned</label>
    <type>Text</type>
</CustomField>