sfdx-source/force-app/main/default/objects/WorkPlan/fields/POS_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>POS_Integration_Type__c</fullName>
    <description>LEM-4773: It indicates the POS Integration Type value to be used on Work Plan list views.</description>
    <formula>TEXT(WorkOrder.Account.POS_Integration_Type__c)</formula>
    <label>POS Integration Type</label>
    <type>Text</type>
</CustomField>