sfdx-source/force-app/main/default/objects/WorkPlan/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>LEM-4773: It indicates the Preferred Language value to be used on Work Plan list views.</description>
    <formula>TEXT(WorkOrder.Account.Preferred_Language__c)</formula>
    <label>Preferred Language</label>
    <type>Text</type>
</CustomField>