sfdx-source/force-app/main/default/objects/WorkPlan/fields/Proposed_Date_of_Activation__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Activation__c</fullName>
    <description>LEM-963: Onboarding event proposed date of activation.</description>
    <formula>WorkOrder.Proposed_Date_of_Activation__c</formula>
    <inlineHelpText>Onboarding event proposed date of activation</inlineHelpText>
    <label>Proposed Date of Activation</label>
    <type>Date</type>
</CustomField>