sfdx-source/force-app/main/default/objects/WorkPlan/fields/Proposed_Date_of_Menu__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Menu__c</fullName>
    <description>LEM-963: Onboarding event proposed date of menu.</description>
    <formula>WorkOrder.Proposed_Date_of_Menu__c</formula>
    <inlineHelpText>Onboarding event proposed date of menu</inlineHelpText>
    <label>Proposed Date of Menu</label>
    <type>Date</type>
</CustomField>