sfdx-source/force-app/main/default/objects/WorkPlan/fields/Proposed_Date_of_Menu_Store__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Menu_Store__c</fullName>
    <description
  >LEM-4910: It indicates the Proposed Date of Menu of Account associated with Work Order of Work Plan. It is used to filter list views or reports on Work Plan object by Store Account's PDOM.</description>
    <formula>WorkOrder.Account.Proposed_Date_of_Menu__c</formula>
    <label>Proposed Date of Menu (Store)</label>
    <type>Date</type>
</CustomField>