sfdx-source/force-app/main/default/objects/WorkPlan/fields/Quaternary_Routing_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Quaternary_Routing_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-19092: It is used for fourth level routing in Queue assignment.</description>
    <label>Quaternary Routing Assigned</label>
    <type>Checkbox</type>
</CustomField>