sfdx-source/force-app/main/default/objects/WorkPlan/fields/Quaternary_Routing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Quaternary_Routing_Queue__c</fullName>
    <description>LEM-19092: It is used to store fourth level routing queue.</description>
    <label>Quaternary Routing Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>