sfdx-source/force-app/main/default/objects/WorkPlan/fields/Queue_Assign_Prior_Status__c.field-meta.xml
<CustomField>
    <fullName>Queue_Assign_Prior_Status__c</fullName>
    <description>LEM-14041: It is used to store the Prior Status during Queue Assignments.</description>
    <label>Queue Assign Prior Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>