sfdx-source/force-app/main/default/objects/WorkPlan/fields/Rescue_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Rescue_Email_Status__c</fullName>
    <label>Rescue Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Response Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>