sfdx-source/force-app/main/default/objects/WorkPlan/fields/Rescued_By__c.field-meta.xml
<CustomField>
    <fullName>Rescued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13575:  MxS rep will manually update the “Rescued By” field with their name.</description>
    <label>Rescued By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rescued_By_User</relationshipName>
    <type>Lookup</type>
</CustomField>