sfdx-source/force-app/main/default/objects/WorkPlan/fields/Return_Components__c.field-meta.xml
<CustomField>
    <fullName>Return_Components__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13510: It is used to store if the work plan contains return components or not.</description>
    <label>Return Components</label>
    <type>Checkbox</type>
</CustomField>