sfdx-source/force-app/main/default/objects/WorkPlan/fields/Secondary_Routing_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Routing_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1047: This flag indicates secondary routing assignment.</description>
    <label>Secondary Routing Assigned</label>
    <type>Checkbox</type>
</CustomField>