sfdx-source/force-app/main/default/objects/WorkPlan/fields/Secondary_Routing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Routing_Queue__c</fullName>
    <description>LEM-1047: Stores secondary routing queue.</description>
    <label>Secondary Routing Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>