sfdx-source/force-app/main/default/objects/WorkPlan/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>LEM-4773: It indicates the Segment value to be used on Work Plan list views.</description>
    <formula>WorkOrder.Segment__c</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>